# mini_dl

./: .gitignore  CMakeLists.txt  MiniDL — 一个可扩展的 C++ 深度学习框架（Autograd + Layers + Optimizer）.docx  ~$niDL — 一个可扩展的 C++ 深度学习框架（Autograd + Layers + Optimizer）.docx
include/: autograd.hpp  grad_fn.hpp  ops.hpp  tensor.hpp  tensor_utils.hpp
src/: autograd.cpp  grad_fn.cpp  ops.cpp  tensor.cpp  tensor_utils.cpp
tests/: test_d5_autograd.cpp  test_d5_tensor_backward.cpp  test_da4_Transp-BroadC-Flatten.cpp  test_matmul_day3.cpp  test_ops.cpp  test_ops_advanced.cpp  test_tensor.cpp
